------------------------------------------------------
Version 1.10.2 - 2.1.0 (versioning: major-minor-build)
------------------------------------------------------
Initial Port to Minecraft 1.10.2

Additions (in relation to 1.8.9 - 2.0.5)
- JEI descriptions for each upgrades.

Changes (in relation to 1.8.9 - 2.0.5)
- New textures! (Credit to the wonderful BBoldt)
- Balance tweaks for recipes and items.
- Polished the JEI integration, it is looking quite nice, if I don't say so myself.
- Removed some crafting items (jeweled feather, treated leather, nest); they were just bloat.
- (Internal) Major cleanup of API
- (Internal) Tons of various minor fixes/changes/optimizations.
- (Internal) Changed how backpacks are stored internally, both for death and in general (change from IEEP to capabilities); should be more stable and relatively futureproof.

Bug Fixes (in relation to 1.8.9 - 2.0.5)
- Many minor fixes (some preemptive)