@@ -58,7 +58,8 @@ button.ironbackpacks.void.tooltip=Void Matching (Deletes items)
 button.ironbackpacks.packToInv.tooltip=Moves items from the backpack to your inventory.
 button.ironbackpacks.invToPack.tooltip=Moves items from your inventory to the backpack
 button.ironbackpacks.barToPack.tooltip=Moves items from your hotbar to the backpack.
-button.ironbackpacks.sort.tooltip=Sorts and condenses the items in the backpack (by localized, alphabetical name)
+button.ironbackpacks.sort.tooltip.alphabetical=Sorts and condenses the items in the backpack by localized, alphabetical name (right click to change).
+button.ironbackpacks.sort.tooltip.id=Sorts and condenses the items in the backpack by item ID (right click to change).
 button.ironbackpacks.left.tooltip=Shift to the left.
 button.ironbackpacks.right.tooltip=Shift to the right.
 button.ironbackpacks.clear.basicFilter.tooltip=Clears the basic filter items.
